<resources>
    <string name="app_name">ContactsWithRoom</string>
    <string name="adds_contact">adds_contact</string>
    <string name="_10">10</string>
    <string name="contact_name">Contact name</string>
    <string name="number">+998993502717</string>
    <string name="delete">delete</string>
    <string name="editor">editor</string>
    <string name="name">Name</string>
    <string name="save">save</string>
    <string name="enter_name">Enter Name</string>
    <string name="cancel">Cancel</string>
    <string name="enter_number">Enter number</string>
    <string name="registration">Registration</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="dont">Don\'t have an account</string>
    <string name="signn_up"><u>Sign up</u></string>
    <string name="sign_up">Sign Up</string>
</resources>